force-app/main/default/objects/AccountContactRelation/fields/Current_User__c.field-meta.xml
<CustomField>
    <fullName>Current_User__c</fullName>
    <formula>IF(
$User.FirstName &amp; &quot; &quot; &amp; $User.LastName =  Contact.FirstName &amp; &quot; &quot; &amp; Contact.LastName,

&quot;True&quot;,
&quot;False&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current User</label>
    <type>Text</type>
</CustomField>