force-app/main/default/objects/AccountContactRelation/fields/End_Date_Formula__c.field-meta.xml
<CustomField>
    <fullName>End_Date_Formula__c</fullName>
    <formula>IF(LEN(TEXT(DAY(EndDate))) = 1, &quot;0&quot; &amp; TEXT(DAY(EndDate)), TEXT(DAY(EndDate)))
&amp; &quot;-&quot; &amp; 
IF(LEN(TEXT(MONTH(EndDate))) = 1, &quot;0&quot; &amp; TEXT(MONTH(EndDate)),TEXT(MONTH(EndDate)))

&amp; &quot;-&quot; &amp; 

TEXT(YEAR(EndDate))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End Date Formula</label>
    <type>Text</type>
</CustomField>