force-app/main/default/objects/AccountContactRelation/fields/I_RS_Campus_Code__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Campus_Code__c</fullName>
    <label>Campus Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AC01</fullName>
            </value>
            <value>
                <fullName>NS01</fullName>
            </value>
            <value>
                <fullName>VI01</fullName>
            </value>
            <value>
                <fullName>VI02</fullName>
            </value>
            <value>
                <fullName>VI03</fullName>
            </value>
            <value>
                <fullName>VI04</fullName>
            </value>
            <value>
                <fullName>VI05</fullName>
            </value>
            <value>
                <fullName>VI06</fullName>
            </value>
            <value>
                <fullName>VI07</fullName>
            </value>
            <value>
                <fullName>VI08</fullName>
            </value>
            <value>
                <fullName>VI09</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>