force-app/main/default/objects/AccountContactRelation/fields/I_RS_Contract_End_Date__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Contract_End_Date__c</fullName>
    <label>Contract End Date</label>
    <type>Date</type>
</CustomField>