force-app/main/default/objects/AccountContactRelation/fields/I_RS_Department_Name__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Department_Name__c</fullName>
    <label>Department Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>