force-app/main/default/objects/AccountContactRelation/fields/I_RS_Employment_Grade_Level__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Employment_Grade_Level__c</fullName>
    <label>Employment Grade/Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A1</fullName>
            </value>
            <value>
                <fullName>A2</fullName>
            </value>
            <value>
                <fullName>A3</fullName>
            </value>
            <value>
                <fullName>A4</fullName>
            </value>
            <value>
                <fullName>A5</fullName>
            </value>
            <value>
                <fullName>A6</fullName>
            </value>
            <value>
                <fullName>A7</fullName>
            </value>
            <value>
                <fullName>A8</fullName>
            </value>
            <value>
                <fullName>B1</fullName>
            </value>
            <value>
                <fullName>B2</fullName>
            </value>
            <value>
                <fullName>B3</fullName>
            </value>
            <value>
                <fullName>B4</fullName>
            </value>
            <value>
                <fullName>B5</fullName>
            </value>
            <value>
                <fullName>B6</fullName>
            </value>
            <value>
                <fullName>C1</fullName>
            </value>
            <value>
                <fullName>C2</fullName>
            </value>
            <value>
                <fullName>C3</fullName>
            </value>
            <value>
                <fullName>C4</fullName>
            </value>
            <value>
                <fullName>C5</fullName>
            </value>
            <value>
                <fullName>C6</fullName>
            </value>
            <value>
                <fullName>D1</fullName>
            </value>
            <value>
                <fullName>D2</fullName>
            </value>
            <value>
                <fullName>D3</fullName>
            </value>
            <value>
                <fullName>D4</fullName>
            </value>
            <value>
                <fullName>E1</fullName>
            </value>
            <value>
                <fullName>HEO1-1</fullName>
            </value>
            <value>
                <fullName>HEO1-2</fullName>
            </value>
            <value>
                <fullName>HEO1-3</fullName>
            </value>
            <value>
                <fullName>HEO1-4</fullName>
            </value>
            <value>
                <fullName>HEO2-1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>