force-app/main/default/objects/AccountContactRelation/fields/I_RS_Employment_Status__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Employment_Status__c</fullName>
    <label>Employment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Teaching &amp; Research</fullName>
            </value>
            <value>
                <fullName>Teaching Focussed</fullName>
            </value>
            <value>
                <fullName>Research only</fullName>
            </value>
            <value>
                <fullName>Other function</fullName>
            </value>
            <value>
                <fullName>Honorary</fullName>
            </value>
            <value>
                <fullName>Casual</fullName>
            </value>
            <value>
                <fullName>Non Staff</fullName>
            </value>
            <value>
                <fullName>Continuing / Fixed Term 1</fullName>
                <isActive>false</isActive>
                <label>Continuing / Fixed Term 1</label>
            </value>
            <value>
                <fullName>Continuing Full Time</fullName>
                <isActive>false</isActive>
                <label>Continuing Full Time</label>
            </value>
            <value>
                <fullName>Continuing Part Time</fullName>
                <isActive>false</isActive>
                <label>Continuing Part Time</label>
            </value>
            <value>
                <fullName>Fixed Term 2</fullName>
                <isActive>false</isActive>
                <label>Fixed Term 2</label>
            </value>
            <value>
                <fullName>Fixed Term Full Time</fullName>
                <isActive>false</isActive>
                <label>Fixed Term Full Time</label>
            </value>
            <value>
                <fullName>Fixed Term Part Time</fullName>
                <isActive>false</isActive>
                <label>Fixed Term Part Time</label>
            </value>
            <value>
                <fullName>Unpaid - Non Employee</fullName>
                <isActive>false</isActive>
                <label>Unpaid - Non Employee</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>