force-app/main/default/objects/AccountContactRelation/fields/I_RS_FTE_Ratio__c.field-meta.xml
<CustomField>
    <fullName>I_RS_FTE_Ratio__c</fullName>
    <label>FTE Ratio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>