force-app/main/default/objects/AccountContactRelation/fields/I_RS_Grant_Project_Proposal_Access__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Grant_Project_Proposal_Access__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Grant Project Proposal Access</label>
    <type>Checkbox</type>
</CustomField>