force-app/main/default/objects/AccountContactRelation/fields/I_RS_Manual__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Manual__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manual</label>
    <type>Checkbox</type>
</CustomField>