force-app/main/default/objects/AccountContactRelation/fields/I_RS_Organisation_Code__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Organisation_Code__c</fullName>
    <label>Organisation Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>