force-app/main/default/objects/AccountContactRelation/fields/I_RS_Part_Of_LaTrobe__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Part_Of_LaTrobe__c</fullName>
    <formula>Account.I_RS_Part_of_La_Trobe__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Part Of LaTrobe</label>
    <type>Checkbox</type>
</CustomField>