force-app/main/default/objects/AccountContactRelation/fields/I_RS_Position_Number__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Position_Number__c</fullName>
    <label>Position Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>