force-app/main/default/objects/AccountContactRelation/fields/I_RS_Position_Source__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Position_Source__c</fullName>
    <label>Position Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>