force-app/main/default/objects/AccountContactRelation/fields/I_RS_Staff_Group_Desc__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Staff_Group_Desc__c</fullName>
    <label>Staff Group Description</label>
    <type>TextArea</type>
</CustomField>