force-app/main/default/objects/AccountContactRelation/fields/I_RS_Staff_ID__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Staff_ID__c</fullName>
    <label>Staff ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>