force-app/main/default/objects/AccountContactRelation/fields/I_RS_Staff_Sub_Group_Code__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Staff_Sub_Group_Code__c</fullName>
    <label>Staff Sub Group Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>