force-app/main/default/objects/AccountContactRelation/fields/I_RS_Supervisor_Id__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Supervisor_Id__c</fullName>
    <label>Supervisor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>