force-app/main/default/objects/AccountContactRelation/fields/I_RS_Title__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Title__c</fullName>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>