force-app/main/default/objects/AccountContactRelation/fields/Organisation__c.field-meta.xml
<CustomField>
    <fullName>Organisation__c</fullName>
    <description>Referenced in flow.</description>
    <formula>Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Organisation</label>
    <type>Text</type>
</CustomField>