force-app/main/default/objects/AccountContactRelation/fields/Start_Date_Formula__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_Formula__c</fullName>
    <formula>IF(LEN(TEXT(DAY(StartDate))) = 1, &quot;0&quot; &amp; TEXT(DAY(StartDate)), TEXT(DAY(StartDate)))
&amp; &quot;-&quot; &amp; 
IF(LEN(TEXT(MONTH(StartDate))) = 1, &quot;0&quot; &amp; TEXT(MONTH(StartDate)),TEXT(MONTH(StartDate)))

&amp; &quot;-&quot; &amp; 

TEXT(YEAR(StartDate))</formula>
    <label>Start Date</label>
    <type>Text</type>
</CustomField>